fix : tab grass alignment problem fix

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ ul{
   display: flex;
 }
 li{
-  margin-left: 20px;
+  margin:0 20px;
 }
 li a {
   text-decoration: none;
@@ -83,12 +83,12 @@ header ul li button {
   position: absolute;
   content: '';
   display: block;
-  width: 127px;
+  width: 100%;
   height: 16px;
   background: var(--grass-url) no-repeat center top;
   background-size: contain;
   top: 100%;
-  left:-11px ;
+ 
 }
 
 footer ul {
